deploy/k8s/portfolio-gatsby-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-gatsby
spec:
  selector:
    matchLabels:
      app: portfolio-gatsby
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: portfolio-gatsby
    spec:
      containers:
        - image: schala/portfolio-gatsby
          name: gatsby
          imagePullPolicy: Always
