deploy/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-gatsby-svc
spec:
  ports:
    - name: nginx
      port: 8080
  selector:
    app: portfolio-gatsby
  clusterIP: None
