deploy/k8s/portfolio-gatsby-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portfolio-gatsby-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - $(SITE_URL)
      secretName: portfolio-gatsby-tls
  rules:
    - host: $(SITE_URL)
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-gatsby-svc
              servicePort: nginx
